; ModuleID = '/home/carl/AnghaBench/kphp-kdb/bayes/extr_bayes-data.c_bayes_lev_set.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/bayes/extr_bayes-data.c_bayes_lev_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_bayes_set = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bayes_lev_set(%struct.lev_bayes_set* %0) #0 {
  %2 = alloca %struct.lev_bayes_set*, align 8
  store %struct.lev_bayes_set* %0, %struct.lev_bayes_set** %2, align 8
  %3 = load %struct.lev_bayes_set*, %struct.lev_bayes_set** %2, align 8
  %4 = getelementptr inbounds %struct.lev_bayes_set, %struct.lev_bayes_set* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.lev_bayes_set*, %struct.lev_bayes_set** %2, align 8
  %7 = getelementptr inbounds %struct.lev_bayes_set, %struct.lev_bayes_set* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.lev_bayes_set*, %struct.lev_bayes_set** %2, align 8
  %10 = getelementptr inbounds %struct.lev_bayes_set, %struct.lev_bayes_set* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = and i32 %11, 15
  %13 = call i32 @bayes_set(i32 %5, i32 %8, i32 %12)
  ret i32 %13
}

declare dso_local i32 @bayes_set(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
